--- a/login.html
+++ b/login.html
@@ -61,10 +61,9 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="signup-caption">
-              <h3>Get reviews and grow business reputation.</h3>
+              <h3>Welcome Back!</h3>
               <p>
-                Find out more on what people and saying about your company, with
-                real time reveiw and data.
+                Find out more on what people and saying about your company.
               </p>
             </div>
           </div>
