js issues fixed

--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="assets/js/sweetalert.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="assets/js/main.js"></script>
 
     <script>
