--- a/login.html
+++ b/login.html
@@ -60,11 +60,9 @@
       <div class="signup-content-wrapper">
         <div class="row">
           <div class="col-lg-6">
-            <div class="signup-caption">
+            <div class="signup-caption w50">
               <h3>Welcome Back!</h3>
-              <p>
-                Find out more on what people and saying about your company.
-              </p>
+              <p>Find out more on what people and saying about your company.</p>
             </div>
           </div>
           <div class="col-lg-6">
@@ -282,7 +280,7 @@
 
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/sweetalert.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
