--- a/timeline-user-page.html
+++ b/timeline-user-page.html
@@ -1547,7 +1547,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="assets/js/croppie.min.js"></script>
-    <!-- <script src="assets/js/sweetalert.min.js"></script> -->
+    <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
 
     <script src="assets/js/main.js"></script>
   </body>
