js issues fixed

--- a/timeline.html
+++ b/timeline.html
@@ -2064,6 +2064,7 @@
   <script src="assets/js/jquery.lsxemojipicker.js"></script>
 
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/timeline.js"></script>
   <script>
     // Show loading icon once at bottom
     jQuery(function ($) {
