--- a/profile.html
+++ b/profile.html
@@ -247,6 +247,16 @@
                           </div>
                         </div>
                         <div class="col-md-6">
+                          <div class="onboarding-tags" id="race">
+                            <div class="tag-info">
+                              Our firm is a long established fact that a reader
+                              will be distracted by the readable of a page when
+                              looking at its layout the point of using lorem
+                              ipsum is that it has a more
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-md-6">
                           <select name="" id="">
                             <option value="" selected disabled>Gender</option>
                           </select>
@@ -411,7 +421,7 @@
           <p class="copyright">
             &copy; Copyright
             <script>
-              document.write(new Date().getFullYear());
+              document.write(new Date().getFullYear())
             </script>
             BlabEmo.
           </p>
@@ -562,61 +572,76 @@
 
     <script>
       // Select All
-      $("#selectAll").change(function () {
+      $('#selectAll').change(function () {
         if (this.checked) {
           $('input[name="blabOption"]').each(function () {
-            this.checked = true;
-          });
+            this.checked = true
+          })
         }
-        $(".select-all").hide();
-        $(".deselect-all").show();
-      });
+        $('.select-all').hide()
+        $('.deselect-all').show()
+      })
 
       // Deselect
-      $("#deselectAll").click(function () {
+      $('#deselectAll').click(function () {
         $('input[name="blabOption"]').each(function () {
-          this.checked = false;
-        });
-        $(".deselect-all").hide();
-        $("#selectAll").prop("checked", false);
-        $(".select-all").show();
-      });
+          this.checked = false
+        })
+        $('.deselect-all').hide()
+        $('#selectAll').prop('checked', false)
+        $('.select-all').show()
+      })
 
-      $(".delete").click(function () {
-        var company = $(this).attr("company");
+      $('.delete').click(function () {
+        var company = $(this).attr('company')
         swal({
-          title: "Are you sure you want to delete this company?",
+          title: 'Are you sure you want to delete this company?',
           text: "Once deleted, you won't be able to have access to the company again!",
-          icon: "warning",
-          buttons: ["Oh no!", "Very Sure!"],
-          dangerMode: true,
+          icon: 'warning',
+          buttons: ['Oh no!', 'Very Sure!'],
+          dangerMode: true
         }).then((willDelete) => {
           if (willDelete) {
             swal(
-              "Company name: " +
+              'Company name: ' +
                 company +
-                ". Function to delete member goes here"
-            );
+                '. Function to delete member goes here'
+            )
           }
-        });
-      });
+        })
+      })
 
       const myData = [
-        { text: "Body Enhancement", value: 1 },
-        { text: "Age", value: 2 },
-        { text: "Religous", value: 3 },
-        { text: "Gender", value: 4 },
-        { text: "Race", value: 5 },
-        { text: "Skin color", value: 6 },
-        { text: "Institution", value: 7 },
-      ];
+        { text: 'Body Enhancement', value: 1 },
+        { text: 'Age', value: 2 },
+        { text: 'Religous', value: 3 },
+        { text: 'Gender', value: 4 },
+        { text: 'Race', value: 5 },
+        { text: 'Skin color', value: 6 },
+        { text: 'Institution', value: 7 }
+      ]
 
-      $("#tags").multiSelect({
+      const raceData = [
+        { text: 'African', value: 1 },
+        { text: 'American', value: 2 },
+        { text: 'Mexican', value: 3 },
+        { text: 'Jamaican', value: 4 },
+        { text: 'Asian', value: 5 }
+      ]
+
+      $('#tags').multiSelect({
         data: myData,
         listen(tags, item, operate) {
-          console.log(tags, item, operate);
-        },
-      });
+          console.log(tags, item, operate)
+        }
+      })
+
+      $('#race').multiSelect({
+        data: raceData,
+        listen(tags, item, operate) {
+          console.log(tags, item, operate)
+        }
+      })
     </script>
   </body>
 </html>
