--- a/email-templates/highlights.html
+++ b/email-templates/highlights.html
@@ -117,6 +117,7 @@
         position: relative;
         display: flex;
         padding: 20px 0;
+        width: 100%;
       }
 
       .blab-img {
