--- a/profile.html
+++ b/profile.html
@@ -229,12 +229,7 @@
                         disabled
                         placeholder="Johnson@gmail.com"
                       />
-                      <input
-                        type="text"
-                        name=""
-                        id=""
-                        placeholder="Johnson Pascal"
-                      />
+                      <input type="text" name="" placeholder="Johnson Pascal" />
                       <div class="row">
                         <div class="col-md-6">
                           <div class="onboarding-tags" id="tags">
@@ -257,13 +252,13 @@
                           </div>
                         </div>
                         <div class="col-md-6">
-                          <select name="" id="">
+                          <select name="">
                             <option value="" selected disabled>Gender</option>
                           </select>
-                          <select name="" id="">
+                          <select name="">
                             <option value="" selected disabled>Age Rage</option>
                           </select>
-                          <select name="" id="">
+                          <select name="">
                             <option value="" selected disabled>
                               Ethnic Group
                             </option>
@@ -285,19 +280,16 @@
                       <input
                         type="password"
                         name=""
-                        id=""
                         placeholder="Current Password"
                       />
                       <input
                         type="password"
                         name=""
-                        id=""
                         placeholder="New Password"
                       />
                       <input
                         type="password"
                         name=""
-                        id=""
                         placeholder="Confirm Password"
                       />
 
@@ -334,12 +326,7 @@
                           </tr>
                         </tbody>
                       </table>
-                      <input
-                        type="text"
-                        name=""
-                        id=""
-                        placeholder="LinkedIn URL"
-                      />
+                      <input type="text" name="" placeholder="LinkedIn URL" />
 
                       <button
                         type="button"
