--- a/about.html
+++ b/about.html
@@ -86,10 +86,13 @@
     <!-- Header end -->
 
     <div class="about-hero">
-      <h3>
-        BlabEmo allows minority groups express their opinions on employment,
-        workplace experiences and rate employers.
-      </h3>
+      <div class="about-hero-overlay">
+        <h4>
+          Blabemo is a platform for employees from diverse backgrounds to share
+          and discuss any forms of prejudice, discrimination, or marginalisation
+          that they have experienced within their working environment.
+        </h4>
+      </div>
     </div>
     <ul class="about-tab">
       <a href=""><li class="active">About Us</li></a>
@@ -224,7 +227,7 @@
           <p class="copyright">
             &copy; Copyright
             <script>
-              document.write(new Date().getFullYear());
+              document.write(new Date().getFullYear())
             </script>
             BlabEmo.
           </p>
